syntax = "proto3";
package tendermint.dbsync;

option go_package = "github.com/tendermint/tendermint/proto/tendermint/dbsync";

import "gogoproto/gogo.proto";
import "tendermint/types/types.proto";
import "tendermint/types/params.proto";

message Message {
  oneof sum {
    MetadataRequest   metadata_request    = 1;
    MetadataResponse  metadata_response   = 2;
    FileRequest       file_request        = 3;
    FileResponse      file_response       = 4;
  }
}

message MetadataRequest {}

message MetadataResponse {
  uint64 height   = 1;
  bytes  hash     = 2;
  repeated string filenames = 3;
  repeated bytes md5checksum = 4;
}

message FileRequest {
  uint64 height = 1;
  string filename = 2;
}

message FileResponse {
  uint64 height  = 1;
  string filename = 2;
  bytes data = 3;
}
